# foji-worker

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml
app/core/: config.py  database.py
app/handlers/: analytics.py  file_extraction.py  whatsapp.py
app/models/: agent.py  agent_file.py
app/services/: agent_resolver.py  chunker.py  whatsapp_service.py
app/services/extractors/: __init__.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py  xlsx_extractor.py
app/utils/: retry.py  s3.py
